# simple-todolist-web

./: Cargo.toml  Dockerfile  README.md  web_todolist
src/: main.rs  models.rs  state.rs
src/routes/: mod.rs  todos.rs
static/: app.js  index.html  style.css
